Fix positioning of expand/collapse button.

--- a/src/components/code/_code_block.scss
+++ b/src/components/code/_code_block.scss
@@ -1,11 +1,13 @@
 .euiCodeBlock {
   display: block;
   position: relative;
-  overflow: auto;
   background: $euiCodeBlockBackgroundColor;
   color: $euiCodeBlockColor;
+  position: relative;
 
   .euiCodeBlock__pre {
+    height: 100%;
+    overflow: auto;
     display: block;
     white-space: pre-wrap;
   }
@@ -29,7 +31,10 @@
     left: 0;
     right: 0;
     bottom: 0;
-    padding: $euiSizeXL !important;
+
+    .euiCodeBlock__pre {
+      padding: $euiSizeXL !important;
+    }
   }
 
   &.euiCodeBlock--fontSmall {
@@ -45,15 +50,21 @@
   }
 
   &.euiCodeBlock--paddingSmall {
-    padding: $euiSizeS;
+    .euiCodeBlock__pre {
+      padding: $euiSizeS;
+    }
   }
 
   &.euiCodeBlock--paddingMedium {
-    padding: $euiSize;
+    .euiCodeBlock__pre {
+      padding: $euiSize;
+    }
   }
 
   &.euiCodeBlock--paddingLarge {
-    padding: $euiSizeL;
+    .euiCodeBlock__pre {
+      padding: $euiSizeL;
+    }
   }
 
   /**
@@ -65,8 +76,11 @@
     white-space: pre;
     color: $euiTextColor;
     font-size: 75%; // 1
-    padding:  0 $euiSizeXS;
     background: $euiColorLightestShade;
+
+    .euiCodeBlock__pre {
+      padding:  0 $euiSizeXS;
+    }
 
     .euiCodeBlock__code {
       display: inline;
